builds/0.8.5/开发标准.md
# CardMaker 开发标准 v0.8.5

## 一、通用准则

- 代码/注释/变量名：英文。面向用户文本/文档/思考过程：中文。
- TypeScript 严格模式，文件命名 kebab-case。
- 原子模块互不依赖，注册表统一管理，增量开发不改已有文件。

## 二、版本发布流程（强制）

每次完成新版本，按以下顺序执行：

### 2.1 版本号统一（强制红线）

版本号必须全链路一致，共涉及 **4 个位置**：

| # | 文件 | 字段 | 值示例 |
|---|------|------|--------|
| 1 | `package.json` | `version` | `"0.8.4"` |
| 2 | `src-tauri/Cargo.toml` | `[package] version` | `"0.8.4"` |
| 3 | `src-tauri/tauri.conf.json` | `version` | `"0.8.4"` |
| 4 | `src-tauri/tauri.conf.json` | `app.windows[0].title` | `"CardMaker v0.8.4"` |

**同步规则**：
- 修改版本号时必须一次性同时改这 4 处，禁止分批、遗漏或改错
- 修改后运行 `npm run tauri build` 重新构建，构建产物 exe 的属性中「文件版本」和「产品版本」会自动取自 Cargo.toml
- 构建完成后**必须右键 exe → 属性 → 详细信息**，确认「文件版本」与「产品版本」均等于目标版本号
- 构建产物版本未更新到目标版本号之前，禁止提交、禁止打包、禁止创建快捷方式

### 2.2 构建与归档

1. `npm run tauri build`（完整构建，不是仅 `npm run build`）
2. 确认构建产物 exe 属性中版本已更新（见 2.1）
3. 在 `F:\TOOLS\ObwilerCardMaker\` 下创建 `{版本号}\` 文件夹
4. 复制全部源码 + 构建产物（`release\`） + 文档 到版本文件夹
5. 排除 `node_modules`、`src-tauri\target`、`dist`

### 2.3 快捷方式（强制）

每次版本发布必须创建两个快捷方式，命名格式 **`CardMaker_{版本号}`**：

| 位置 | 路径示例 | 目标指向 |
|------|----------|----------|
| 桌面 | `E:\ZhuoMian\CardMaker_0.8.4.lnk` | `F:\TOOLS\ObwilerCardMaker\builds\0.8.4\release\cardmaker.exe` |
| 项目根目录 | `F:\TOOLS\ObwilerCardMaker\CardMaker_0.8.4.lnk` | `F:\TOOLS\ObwilerCardMaker\builds\0.8.4\release\cardmaker.exe` |

**严格红线**：两个快捷方式必须同步创建、同步更新，缺一不可。桌面快捷方式方便日常启动；项目根目录快捷方式确保仓库级可发现性。

### 2.4 文档放置

三份说明性文档**必须放在版本文件夹根层**（非 `docs\` 子目录），确保打开文件夹即见：

```
0.8.4\
├── 项目说明.md      ← 直观可见
├── 开发标准.md      ← 直观可见
├── 更新日志.md      ← 直观可见
├── src\
└── ...
```

### 2.5 Git 提交

```bash
git add -A
git commit -m "版本描述"
git tag v{版本号}
git push && git push --tags
```

远程仓库：`git@github.com:Obwiler/ObwilerCardMaker.git`（SSH，密钥 `id_ed25519_cardmaker`）

### 2.6 根目录 README

每次发布后更新 `F:\TOOLS\ObwilerCardMaker\README.md`（GitHub 主页），列出最新版本号和版本文件夹索引。

## 三、GitHub 主页维护

`README.md` 在仓库根层，GitHub 自动渲染为项目首页。包含：
- 项目简介
- 版本文件夹索引表
- 快速开始指引

## 四、UI 默认值规范

- 卡面可编辑文字颜色（cardTextColor）默认值为黑色（#000000），不再跟随稀有度颜色。

## 五、代码审查清单

- [ ] 四处版本号全链路一致（package.json / Cargo.toml / tauri.conf.json version / tauri.conf.json title）
- [ ] 右键 exe 属性确认「文件版本」和「产品版本」均为目标值
- [ ] 标题栏 `tauri.conf.json` title 同步为 `CardMaker v{版本号}`
- [ ] 新增模板已在注册表注册
- [ ] exporters.ts 已添加自然语言生成
- [ ] validators.ts 已添加校验规则
- [ ] 快捷方式已创建（桌面 + 项目根目录）
- [ ] 文档放在版本文件夹根层
- [ ] TypeScript 编译无错误
